--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
-apply plugin: 'java'
+buildscript {
+	dependencies {
+		classpath group: "com.liferay", name: "com.liferay.gradle.plugins.source.formatter", version: "2.3.258"
+	}
+
+	repositories {
+		maven {
+			url "https://repository-cdn.liferay.com/nexus/content/groups/public"
+		}
+	}
+}
+
+apply plugin: "com.liferay.source.formatter"
 apply plugin: 'eclipse'
-
-
+apply plugin: 'java'
 
 group = 'com.liferay.engineer.analytics'
 version = '1.0.0-SNAPSHOT'
-
 
 description = """Sample TDD Functional Test Module for Engineer Team - Analytics Project"""
 
@@ -16,18 +26,19 @@ repositories {
 }
 
 dependencies {
+	compile group: "com.liferay.gs", name: "frw-selenium-commons", version: "2.3.0"
 	compile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compile group: "commons-io", name: "commons-io", version: "2.6"
 	compile group: "javax.portlet", name: "portlet-api", version: "2.0"
 	compile group: "javax.servlet", name: "servlet-api", version: "2.5"
 	compile group: "org.codehaus.groovy", name: "groovy-all", version: "2.4.5"
+	compile group: "org.easetech", name: "easytest-core", version: "1.4.0"
 	compile group: "org.osgi", name: "org.osgi.compendium", version: "5.0.0"
-	
-	compile group: 'org.easetech', name: 'easytest-core', version: '1.4.0'
-    testImplementation 'junit:junit:4.12'
-	testCompile group: 'junit', name: 'junit', version: '4.12'
-	compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.14.0'
-	compile group: 'commons-io', name: 'commons-io', version: '2.6'
-	compile group: "com.liferay.gs", name: "frw-selenium-commons", version: "2.3.0"
+	compile group: "org.seleniumhq.selenium", name: "selenium-java", version: "3.14.0"
+
+	testCompile group: "junit", name: "junit", version: "4.12"
+
+	testImplementation group: "junit", name: "junit", version: "4.12"
 }
 
 tasks.withType(Test) {
@@ -85,8 +96,6 @@ task performTests(type: Test) {
 task runFunctionalTest {
 	dependsOn performTests
 }
-
-
 
 // Command to run this task: ./gradlew functionalTestClass -PclassToBeTested=<Class Name>
 // Example: ./gradlew functionalTestClass -PclassToBeTested=SampleTest
